frontend/test/should_fail/array_map_index_scalar.grg
test array_map(ref a:array<int>) {
	if {
		a.map<int>{idx:string -> value:int -> value}.empty();
	}	
}
